Cleanse irrelevant in redirects.yml

--- a/total-rewards/compensation/index.html.md.erb
+++ b/total-rewards/compensation/index.html.md.erb
@@ -215,7 +215,7 @@ All [one-time bonuses](https://about.gitlab.com/handbook/incentives/) including 
 
 ### Not paid in your local currency
 
-There are a number of reasons why team members may not be paid in local currency. For example, GitLab's bank might not support the currency or there may be a strong economic reason for the team member to choose a different currency. The currencies that GitLab can pay in are published on the [contracts](https://about.gitlab.com/handbook/contracts#available-currencies) page.
+There are a number of reasons why team members may not be paid in local currency. For example, GitLab's bank might not support the currency or there may be a strong economic reason for the team member to choose a different currency. The currencies that GitLab can pay in are published on the [contracts](https://about.gitlab.com/handbook/people-group/contracts-probation-periods/) page.
 
 1. The Total Rewards team will analyze the difference in exchange rates from December to June (or vice versa) and their effect on local purchasing power using the following process:
     - The exchange rate between the team member's local currency and chosen currency will be compared for both the current and previous conversion effective date.
@@ -226,7 +226,7 @@ There are a number of reasons why team members may not be paid in local currency
     - Has not opted out.
 1. Only changes greater than +/- 5% will be processed in each review.
     - Changes must stay within band of the compensation calculator.
-1. The Total Rewards team will work with People Connect to confirm by [letter of adjustment](https://about.gitlab.com/handbook/contracts/#letter-of-adjustment) any _increases or decreases_ to compensation as a result of this review.
+1. The Total Rewards team will work with People Connect to confirm by [letter of adjustment](https://about.gitlab.com/handbook/people-group/contracts-probation-periods/#letter-of-adjustment) any _increases or decreases_ to compensation as a result of this review.
 1. Any significant increases or decreases will be reviewed on a case-by-case basis before any changes are made.
 1. Team members may also [opt out](https://docs.google.com/document/d/1GMxFFMKL8ssEi8gPJzpc1xizSJHxrR2n0R5HSZn-G-g/edit?usp=sharing) of the reviews.
     - If an opt out agreement is signed, the team members will be excluded from any future Exchange Rate reviews. GitLab retains the right to revisit the opt-out status in the future.
