Cleanse irrelevant in redirects.yml

--- a/culture/all-remote/compensation/index.html.md.erb
+++ b/culture/all-remote/compensation/index.html.md.erb
@@ -35,13 +35,13 @@ In the above [GitLab Unfiltered](https://www.youtube.com/channel/UCMtZ0sc1HHNtGG
 
 Compensating people in a variety of countries isn't easy, and there's no blanket solution. However, as GitLab grows, it's able to incorporate in more countries. This allows us to be a traditional employer, paying local team members directly.
 
-For countries where that's not yet possible, we oftentimes hire professional employment organizations to serve as the employer of record (EOR) in order to facilitate payments. In other cases, we hire new team members as [contractors](/handbook/contracts/).
+For countries where that's not yet possible, we oftentimes hire professional employment organizations to serve as the employer of record (EOR) in order to facilitate payments. In other cases, we hire new team members as [contractors](/handbook/people-group/contracts-probation-periods/).
 
 We continually look at where our team is growing, which guides us in prioritizing where to incorporate next.
 
 ## What currency do you use?
 
-The preference is for team members and future team members to be paid in their local currency. However, there may be instances where this is not possible and another currency may be chosen by the team member. For the full list of countries where GitLab can pay using local currency, visit the [Contracts section of our Handbook](/handbook/contracts/#available-currencies).
+The preference is for team members and future team members to be paid in their local currency. However, there may be instances where this is not possible and another currency may be chosen by the team member. For the full list of countries where GitLab can pay using local currency, visit the [Contracts section of our Handbook](/handbook/people-group/contracts-probation-periods/#available-currencies).
 
 ## Why do you pay local rates?
 
