Cleanse irrelevant in redirects.yml

--- a/development/dev/plan/index.html.md.erb
+++ b/development/dev/plan/index.html.md.erb
@@ -338,6 +338,6 @@ Engineering team-members can shadow a product stable-counterpart. Shadowing sess
 
 #### Plan xMAU
 
-- [Project Management Performance Indicators](https://about.gitlab.com/handbook/product/dev-section-performance-indicators/#plan-planproject-management---smau-paid-gmau---mau-interacting-with-issues), [Issue Interactions Dashboard](https://app.periscopedata.com/app/gitlab/775807/Plan-xMAU-(monthly))
-- [Product Planning Performance Indicators](https://about.gitlab.com/handbook/product/dev-section-performance-indicators/#planproduct-planning---paid-gmau---mau-creating-epics-each-month)
-- [Certify Performance Indicators](https://about.gitlab.com/handbook/product/dev-section-performance-indicators/#plancertify---paid-gmau---mau-interacting-with-requirements)
+- [Project Management Performance Indicators](https://about.gitlab.com/handbook/product/dev-section-performance-indicators/), [Issue Interactions Dashboard](https://app.periscopedata.com/app/gitlab/775807/Plan-xMAU-(monthly))
+- [Product Planning Performance Indicators](https://about.gitlab.com/handbook/product/dev-section-performance-indicators/)
+- [Certify Performance Indicators](https://about.gitlab.com/handbook/product/dev-section-performance-indicators/)
