Cleanse irrelevant in redirects.yml

--- a/team/structure/index.html.md.erb
+++ b/team/structure/index.html.md.erb
@@ -497,7 +497,7 @@ We do have an exception to the above, which is a senior leader in Product Manage
 
 Here are some examples of the things that this senior leader will coordinate:
 
-* Growth Group: [Stages per User (SpU)](/handbook/product/metrics/#stages-per-user-spu)
+* Growth Group: [Stages per User (SpU)](/handbook/product/performance-indicators/)
 * Pricing: [Tiers](/pricing/)
 * Infrastructure Department: Cloud spend (within limits, not cost per user)
 * Development Department: Prioritization of large enterprise features
