Cleanse irrelevant in redirects.yml

--- a/job-families/product/product-manager/index.html.md.erb
+++ b/job-families/product/product-manager/index.html.md.erb
@@ -62,7 +62,7 @@ to get started.
 
 ### Primary Performance Indicator for the Role
 
-[Stage Monthly Active Users](https://about.gitlab.com/handbook/product/metrics/#adoption)
+[Stage Monthly Active Users](https://about.gitlab.com/handbook/product/performance-indicators/)
 
 ***
 
