Cleanse irrelevant in redirects.yml

--- a/kpis/index.html.md.erb
+++ b/kpis/index.html.md.erb
@@ -135,7 +135,7 @@ We have the following abbreviation letter before SAT, please don’t use SAT wit
 - I = [Interviewee](/#interviewee-satisfaction-isat){:data-ga-name="interviewee"}{:data-ga-location="body"} (would you recommend applying here)
 - L = [Leadership](/handbook/eba/#leadership-sat-survey){:data-ga-name="leadership"}{:data-ga-location="body"} (as an executive with dedicated administrative support, how is your executive administrative support received)
 - O = [Onboarding](/handbook/people-group/people-group-metrics/#onboarding-tsat){:data-ga-name="onboarding"}{:data-ga-location="body"} (how was your onboarding experience)
-- P = [Product](/handbook/product/metrics/#paid-net-promoter-score){:data-ga-name="product"}{:data-ga-location="body"} (would you recommend GitLab the product)
+- P = [Product](/handbook/product/performance-indicators/){:data-ga-name="product"}{:data-ga-location="body"} (would you recommend GitLab the product)
 - S = [Support](/handbook/support/#support-satisfaction-ssat){:data-ga-name="support"}{:data-ga-location="body"} (would you recommend our support followup)
 - T = Team-members (would you recommend working here)
 
