Update the EM to Paul on Application Performance group page

--- a/development/enablement/data_stores/application_performance/index.html.md.erb
+++ b/development/enablement/data_stores/application_performance/index.html.md.erb
@@ -25,13 +25,13 @@ You can check our [direction page](/direction/application_performance/) for more
 
 The following people are permanent members of the Application Performance group:
 
-<%= direct_team(manager_slug: 'cliu', role_regexp: /Application Performance|Enablement/) %>
+<%= direct_team(manager_slug: 'pjphillips', role_regexp: /Application Performance|Enablement/) %>
 
 ## Stable Counterparts
 
 The following members of other functional teams are our stable counterparts:
 
-<%= stable_counterparts(role_regexp: /Senior Product Manager.*Memory|Enablement.*Memory/, direct_manager_role: 'Backend Engineering Manager, Global Search and Application Performance') %>
+<%= stable_counterparts(role_regexp: /Senior Product Manager.*Application Performance|Enablement.*Application Performance/, direct_manager_role: 'Backend Engineering Manager, Application Performance') %>
 
 ## Meetings
 Where we can we follow the GitLab values and communicate asynchronously.  However, there have a few important recurring meetings.  Please reach out to the [#g_application_performance](https://gitlab.slack.com/messages/CGN8BUCKC) Slack channel if you'd like to be invited.
