--- a/development/enablement/systems/gitaly/index.html.md.erb
+++ b/development/enablement/systems/gitaly/index.html.md.erb
@@ -199,7 +199,8 @@ after the 18th that issue will be used to discuss what was brought up.
 
 * [Actual pending Infradev issues](https://app.periscopedata.com/app/gitlab/899982/InfraDev?widget=12327718&udv=0) (sort by group, focus on gitaly)
 - [Out of SLO Infradev issues](https://gitlab.okta.com/app/periscopedata/exk3fzi3sc0TkcYSj357/sso/saml)
-* [Error budget](https://dashboards.gitlab.net/d/stage-groups-detail-gitaly/stage-groups-gitaly-group-error-budget-detail?orgId=1)
+* [Gitaly:Cluster Error budget](https://dashboards.gitlab.net/d/stage-groups-gitaly_cluster/stage-groups-gitaly-cluster-group-dashboard?orgId=1)
+* [Gitaly:Git Error budget](https://dashboards.gitlab.net/d/stage-groups-gitaly_git/stage-groups-gitaly-git-group-dashboard?orgId=1)
 - [MR review workload](https://gitlab-org.gitlab.io/gitlab-roulette/?currentProject=gitaly)
 
 <%= partial "handbook/engineering/metrics/partials/_cross_functional_dashboard.erb", locals: { filter_value: "Gitaly" } %>
