Add roadmap preso to handbook

--- a/development/ops/package/index.html.md.erb
+++ b/development/ops/package/index.html.md.erb
@@ -593,6 +593,7 @@ There are times during the development lifecycle that changes need to be communi
 
 ### Roadmap
 - [Package roadmap review - March 2022](https://youtu.be/gsSWEqX4dOA)
+- [Package roadmap review - January 2023](https://youtu.be/O-4kMmQBb34)
 
 ### Demos & Speedruns
 
