--- a/product/categories/index.html.md.erb
+++ b/product/categories/index.html.md.erb
@@ -210,6 +210,19 @@ Changes that require approval only from the relevant Product Director include:
 - Changes to section or group member lists
 - Changes to a category vision page
 
+### Changing group name
+
+When changing the name of a group, make sure to go through the following steps:
+
+- Create a MR to change the group name in [`data/stages.yml`](https://gitlab.com/gitlab-com/www-gitlab-com/blob/master/data/stages.yml) using the Group-Stage-Category-Change template
+- Get the required signoff
+- Merge the group name change MR
+- Create an issue in the triage-ops project to [update GitLab Bot automation for Stage or Group change](https://gitlab.com/gitlab-org/quality/triage-ops/-/issues/new?issuable_template=stage-or-group-label-change)
+- Tag the group's Technical Writer in the merge request to ensure documentation metadata is updated after the group change is merged
+- Share MR in #product, #development, and relevant #s_, #g_, and #f_ Slack channels
+- Review direction pages, groups, projects, epics, issues, templates and documentation to ensure the name change is applied consistently.
+- Rename Slack channels to reflect the new group name
+
 ### Changing category name
 
 When changing an existing category name, there are some considerations to the order of events:
