Removes references to Ally and Ally-specific scoring guidance

--- a/product/product-okrs/index.html.md.erb
+++ b/product/product-okrs/index.html.md.erb
@@ -80,38 +80,15 @@ Product Division (PM and UX) OKRs for the following quarters can be found in thi
 
 **When to update the status of Product OKRs** 
 
-- For all Product team OKRs, the KR owners are responsible for keeping the status of their KRs in Ally.io up to date
-     - Team members who **own** specific OKRs will update [the score (% complete) in Ally.io](https://about.gitlab.com/company/okrs/#scoring-okrs) monthly and ping any relevant stakeholders as needed. For example, since FY23-Q1 begins February 1, KR owners will provide score updates by February 15,  March 15 and April 15. We follow this mid-month cycle to ensure there are accurate OKR status updates for [Key Reviews](https://about.gitlab.com/handbook/key-review/) which typically happen around the 20th of each month.
-- **Owners** of KRs will get pinged with reminders to do "check-ins" via  Ally/Slack around the 5th of each month. To get more reminders or to opt-out, visit [how to use Ally.io](#how-to-use-allyio) 
-- **Owners** of KRs will also get pinged in the [Product Key Review issue](https://gitlab.com/gitlab-com/Product/-/issues/2919) as needed to update the Product Key Review slides around the 18th of each month based on what is in Ally.io
+- For all Product team OKRs, the KR owners are responsible for keeping the status of their KRs in [GitLab](https://about.gitlab.com/company/okrs/#how-to-use-gitlab-for-okrs) up to date
+     - Team members who **own** specific OKRs will update [the score (% complete) in GitLab](https://about.gitlab.com/company/okrs/#scoring-okrs) monthly and ping any relevant stakeholders as needed. For example, since FY23-Q1 begins February 1, KR owners will provide score updates by February 15,  March 15 and April 15. We follow this mid-month cycle to ensure there are accurate OKR status updates for [Key Reviews](https://about.gitlab.com/handbook/key-review/) which typically happen around the 20th of each month.
+- **Owners** of KRs will get pinged with reminders to do "check-ins" via Slack around the 5th of each month.
+- **Owners** of KRs will also get pinged in the [Product Key Review issue](https://gitlab.com/gitlab-com/Product/-/issues/2919) as needed to update the Product Key Review slides around the 18th of each month based on what is in GitLab.
 
-**How to report progress (% score in Ally) of Product OKRs**
+**How to report progress of Product OKRs**
 
-In order to maintain consistency in evaluating progress across R & D, all Product OKRs will follow the scoring method outlined below as proposed in [Scoring Shared OKRs Consistently Across R & D](https://gitlab.com/gitlab-com/ally-okr-rollout/-/issues/25).
-
-At the beginning of each quarter, shared product KR owners should lead and align the [Product Group](https://about.gitlab.com/handbook/product/product-processes/#quad--infra--security-product-group-dris) (the cross-functional team doing the work) to define a plan to accomplish their KRs as scorable in the following manner:
-
-**Scoring Method: Scale**
-
-This method allows for flexibility and can give you credit for achieving part of the key result. KRs are scored on a 0-100% scale. If you deliver part of the KR you can credit that result as a % score. 
-
-     Example:
-
-     Objective: Improve License Management
-
-     - KR1 - Close 16 License issues
-     - KR2 - Reduce license-related support tickets by 4%
-     - KR3 - Manually audit 100% of missing license data
-
-     If you use the scale scoring method it would look like this:
-
-     - KR1 - Closed 8 of 16 issues - 50%
-     - KR2 - Reduced license-related support tickets by 3.8% - 95%
-     - KR3 - Manually audited 100% of missing license data - 100%
-
-In this scenario you didn’t complete two of the KRs, but since you selected the Scale method you were able to get credit for what was completed. For example, 8 of 16 pain points is 1/2 of the KR, so the score is 50%. If additional issues were found during development, you would create a new OKR to resolve those issues the following quarter rather than shift the target of your current quarter.
-
-**Note:** It is recommended to leverage the [Ally/GitLab issue integration](https://www.youtube.com/watch?v=cLgrylX8ufw) to help automate the % tracking of the progress of KRs in Ally in tandem with the methodology above. This will create a clear tie between KRs in Ally and the work related to the KR in GitLab. However, KRs can also be scored manually in Ally.io. For more guidance on how to leverage the Ally/GitLab issue integration see this [sample issue](https://gitlab.com/gitlab-com/ally-okr-rollout/-/issues/6#examples) and other resources in [how to use Allio.io](#how-to-use-allyio).
+- Prior to the start of each quarter, shared product KR owners should lead and align on a plan for the [Product Group](https://about.gitlab.com/handbook/product/product-processes/#quad--infra--security-product-group-dris) to accomplish their KRs.
+- For guidance on how to structure and score OKRs, refer to the Scoring OKRs section on the GitLab OKRs page (https://about.gitlab.com/company/okrs/#scoring-okrs).
 
 **How this will look in Product Key Review slides**
 
