Removing reference to Ally

--- a/development/dev/manage/organization/_okr_training_process.erb
+++ b/development/dev/manage/organization/_okr_training_process.erb
@@ -7,4 +7,4 @@ At the beginning of the quarter, when OKR is due, the Engineering Manager is res
 The issue should consist of a link to the training, an explanation of why the OKR was set and checkboxes for all the team members.
 Also, the due date needs to be set. Then all of the team members are mentioned in the issue for awareness.
 
-Based on the checkboxes, the Engineering Manager updates the OKR in Ally.
+Based on the checkboxes, the Engineering Manager updates the OKR in GitLab.
