--- a/product/product-operations/index.html.md.erb
+++ b/product/product-operations/index.html.md.erb
@@ -45,12 +45,7 @@ Product operations work happens in alignment with GitLab's [product development 
 
 ## Product operations surveys
 
-Product operations is responsible for managing Post Purchase Surveys (PPS) as well as Paid NPS Surveys (PNPS) on behalf of GitLab. All product operations owned survey results can be found [here](https://about.gitlab.com/handbook/product/product-operations/surveys/). Supporting workflow and technical details can be found [here](https://about.gitlab.com/handbook/product/product-operations/surveys/workflows/). 
+Product operations is responsible for managing Post Purchase Surveys (PPS) as well as Paid NPS Surveys (PNPS) on behalf of GitLab.
 
-
-
-
-
-
-
-
+- [Survey results](https://about.gitlab.com/handbook/product/product-operations/surveys/)
+- [Workflow and technical details](https://about.gitlab.com/handbook/product/product-operations/surveys/workflows/)
