add initial general team page

--- a/infrastructure/team/reliability/index.html.md.erb
+++ b/infrastructure/team/reliability/index.html.md.erb
@@ -65,12 +65,9 @@ We maintain a single source of truth epic for all work underway for the Reliabil
 
 #### Standing Squads
 
-##### General Squad
+##### [General](https://about.gitlab.com/handbook/engineering/infrastructure/team/reliability/general.html)
 
- * Addresses [Infrastructure Corrective Actions](https://gitlab.com/groups/gitlab-com/gl-infra/-/boards/1181205?label_name[]=corrective%20action) as required
- * Works on [priortized issues](https://about.gitlab.com/handbook/engineering/infrastructure/team/reliability/issues.html#issue-priority) from the [Reliability General Backlog](https://gitlab.com/gitlab-com/gl-infra/reliability/-/boards/3993753?not%5Blabel_name%5D%5B%5D=squad%3A%3A*&assignee_id=None)
- * Updates Infrastructure metrics as part of the [Engineering Allocation Process](https://about.gitlab.com/handbook/engineering/#engineering-allocation).
-    * This is the responsibility of the General Squad Engineering Manager within Reliability to update these metrics each week or arrange for someone else to cover when out-of-office.
+The General Team supports the Reliability Team's [overall vision](/handbook/engineering/infrastructure/team/reliability/#vision) by supporting services for GitLab.com that do not fit the mission of the other [Reliability Teams](/handbook/engineering/infrastructure/team/reliability/#reliability-teams). See the [dedicated General Team Page](/handbook/engineering/infrastructure/team/reliability/general.html) for more details. 
 
 ##### Observability Squad
 
