Add initial definition for Practises team

--- a/infrastructure/team/reliability/index.html.md.erb
+++ b/infrastructure/team/reliability/index.html.md.erb
@@ -110,9 +110,9 @@ This squad is comprised of DBREs and one or two SREs to support their learning t
   * Spend two quarters shadowing the DRI in preparation for becoming DRI.
   * Provide squad leadership support when Squad DRI is OOO or On-Call.
 
-#### Stable Counterparts
+#### Reliability:Practices team
 
-The Reliability Team works together with [Stage Groups](https://about.gitlab.com/handbook/product/categories/) to create Stable Counterparts.  See the dedicated [Stable Counterparts handbook page](https://about.gitlab.com/handbook/engineering/infrastructure/team/stable-counterpart.html) for more details on this process.
+The Practices Team has [SRE's](https://about.gitlab.com/job-families/engineering/infrastructure/site-reliability-engineer/) that work full time directly with [Stage Groups Teams](https://about.gitlab.com/handbook/product/categories/) to focus on their Reliability and Infrastructure concerns for GitLab.com when their need is greater than the [General Team](/handbook/engineering/infrastructure/team/general.html) can support.  See the dedicated [Practices Team handbook page](/handbook/engineering/infrastructure/team/practises-team.html) for more details.
 
 ### How We Work -- General Workflow
 
