Update Practices team path

--- a/infrastructure/team/reliability/practices.html.md.erb
+++ b/infrastructure/team/reliability/practices.html.md.erb
@@ -1,6 +1,6 @@
 ---
 layout: handbook-page-toc
-title: Reliability:Practises Team
+title: Reliability:Practices Team
 ---
 
 ## On this page
@@ -18,7 +18,7 @@ and [performance](/handbook/engineering/infrastructure/performance-indicators/#g
 
 ## Team Members
 
-The following people are members of the Reliability:Practises team
+The following people are members of the Reliability:Practices team
 
 <%= direct_team(manager_slug: 'kwanyangu')%>
 
@@ -41,7 +41,7 @@ Requests not in the scope below should refer to Reliability team's defined [Gene
 
 
 ### Caveats
-The Practises team is not there to reduce the stage team's backlog but to collaborate and support reliability efforts and infrastructure best practices. 
+The Practices team is not there to reduce the stage team's backlog but to collaborate and support reliability efforts and infrastructure best practices. 
 
 The above scope of work might imply some overlap with other teams' functions such as; 
   - Capacity planning owned by [Scalability team](https://about.gitlab.com/handbook/engineering/infrastructure/team/scalability/)
@@ -57,16 +57,16 @@ We use quarterly [Objectives and Key Results](https://about.gitlab.com/company/o
 We measure the value we contribute by using [performance indicator metrics](https://about.gitlab.com/handbook/engineering/infrastructure/performance-indicators/#key-performance-indicators). 
 
 In addition to the Infrastructure Department's KPIs for [availability](/handbook/engineering/infrastructure/performance-indicators/#gitlabcom-availability)
-and [performance](/handbook/engineering/infrastructure/performance-indicators/#gitlab-com-performance) of GitLab.com, the Practises team tracks the following;
+and [performance](/handbook/engineering/infrastructure/performance-indicators/#gitlab-com-performance) of GitLab.com, the Practices team tracks the following;
  - Service's Pager load
  - Improvements of service SLOs
  - Introduction of better SLIs for services to define customer happiness 
  - Improve the [Service Maturity level](https://about.gitlab.com/handbook/engineering/infrastructure/service-maturity-model/).
 
-The Practises team does not necessarily own the above KPIs and metrics but rather facilitate and support them to ensure reliable services and components. 
+The Practices team does not necessarily own the above KPIs and metrics but rather facilitate and support them to ensure reliable services and components. 
 
 ## Technical skills
- - The technical skill required for Practises team is as defined in our [Engineering Infrastructure roles](https://about.gitlab.com/job-families/engineering/infrastructure/) for [Site Reliability Engineer](https://about.gitlab.com/job-families/engineering/infrastructure/site-reliability-engineer/) 
+ - The technical skill required for Practices team is as defined in our [Engineering Infrastructure roles](https://about.gitlab.com/job-families/engineering/infrastructure/) for [Site Reliability Engineer](https://about.gitlab.com/job-families/engineering/infrastructure/site-reliability-engineer/) 
  - Able to contribute upstream to the respective product/stage group.
  - Strong knowledge of SLI/SLO in general and how they work at GitLab.
 
@@ -122,7 +122,7 @@ Participants:
 
 ### Ongoing Stage group engagements
 
-|**Stage Group**|**Reliability:Practises Team Members**|
+|**Stage Group**|**Reliability:Practices Team Members**|
 |--------------|-----------------------------|
 <% data.sections.each do |sectionKey, section| %>
   <% data.stages.stages.select{|stageKey,stage| stage.section==sectionKey}.each do |stageKey, stage| %>
@@ -141,13 +141,13 @@ Participants:
 
 ### Pairing with Stage Group
 
-It is encouraged to perform pairings between the Practises team members and their assigned Stage Group team. This provides multiple immediate benefits:
+It is encouraged to perform pairings between the Practices team members and their assigned Stage Group team. This provides multiple immediate benefits:
  - It allows to easily spread knowledge that can be of immediate benefit.
  - It helps build a stronger relationship.
  - It allows to easily identify and discuss opportunities for improvement in the
   product.
 
-Both the Practises team member and their assigned Stage Group team members are encouraged to reach out to the respective counterpart to ask whether they have room to work on a specific issue together. 
+Both the Practices team member and their assigned Stage Group team members are encouraged to reach out to the respective counterpart to ask whether they have room to work on a specific issue together. 
 Any identified improvements should be documented by creating issues or creating merge requests.
 
 ### Stage Group Weekly meetings
@@ -161,7 +161,7 @@ Members of the Practices team are encouraged to identify and attend one or more 
 
 ### Issue boards and projects
 
-Issues for Practises team can be found in the following projects:
+Issues for Practices team can be found in the following projects:
 
 ### Recurring meetings
 
