Cleanse irrelevant in redirects.yml

--- a/job-families/sales/smb-customer-advocate/index.html.md.erb
+++ b/job-families/sales/smb-customer-advocate/index.html.md.erb
@@ -192,10 +192,10 @@ Below are some common drivers the SMB team has seen for a customer to gravitate 
 
 **Some resources for negotiation:**
 * [Our Pricing Model](https://about.gitlab.com/company/pricing/)
-* [Common Negotiation Mistakes](https://about.gitlab.com/handbook/sales-training/#11-sales-negotiation-mistakes-you-might-be-making-)
+* [Common Negotiation Mistakes](https://about.gitlab.com/handbook/sales/training/)
 * [Pricing Approval Matrix](https://docs.google.com/document/d/1-8TG8YLAQB-465mFLYnX3wkB6C6-0aI1A4CzdfjpacU/edit?pli=1)
-* [Handling Price Objections](https://about.gitlab.com/handbook/sales-training/#a-two-step-formula-for-handling-pricing-objections-)
-* [More on Price Objections](https://about.gitlab.com/handbook/sales-training/#price-objections---the-script-that-always-closes-)
+* [Handling Price Objections](https://about.gitlab.com/handbook/sales/training/)
+* [More on Price Objections](https://about.gitlab.com/handbook/sales/training/)
 * [Process for Agreement Terms Negotiations](https://about.gitlab.com/handbook/sales/field-operations/order-processing/#process-for-agreement-terms-negotiations-when-applicable)
 
 
